--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,6 +7,14 @@ tasks:
       apt-get update
       apt-get install -y ddev
       ddev start -y
+      export DDEV_NONINTERACTIVE=true
+      ddev exec "cat .env.example | sed  -E 's/DB_(HOST|DATABASE|USERNAME|PASSWORD)=(.*)/DB_\1=db/g' > .env"
+      ddev exec 'sed -i "s#APP_URL=.*#APP_URL=${DDEV_PRIMARY_URL}#g" .env'
+      ddev exec "php artisan key:generate"
+      ddev php artisan migrate
+      ddev php artisan db:seed
+      ddev php artisan storage:link
+
     init: |
       ddev composer install
       ddev npm i -g npm@latest
@@ -15,12 +23,7 @@ tasks:
 
       ddev npm run dev
     command: |
-      export DDEV_NONINTERACTIVE=true
-      ddev exec "cat .env.example | sed  -E 's/DB_(HOST|DATABASE|USERNAME|PASSWORD)=(.*)/DB_\1=db/g' > .env"
-      ddev exec 'sed -i "s#APP_URL=.*#APP_URL=${DDEV_PRIMARY_URL}#g" .env'
-      ddev exec "php artisan key:generate"
-      ddev php artisan migrate
-      ddev php artisan db:seed
+
       ddev launch
 
 vscode:
