--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -11,9 +11,9 @@ tasks:
       ddev exec "cat .env.example | sed  -E 's/DB_(HOST|DATABASE|USERNAME|PASSWORD)=(.*)/DB_\1=db/g' > .env"
       ddev exec 'sed -i "s#APP_URL=.*#APP_URL=${DDEV_PRIMARY_URL}#g" .env'
       ddev exec "php artisan key:generate"
-      ddev php artisan migrate
-      ddev php artisan db:seed
-      ddev php artisan storage:link
+      ddev exec "php artisan migrate"
+      ddev exec "php artisan db:seed"
+      ddev exec "php artisan storage:link"
 
     init: |
       ddev composer install
